--- a/chapter04-R-for-Data-Science-Solutions.Rmd
+++ b/chapter04-R-for-Data-Science-Solutions.Rmd
@@ -38,8 +38,49 @@ new.packages <- list.of.packages[!(list.of.packages %in% installed.packages()[,"
 if(length(new.packages)) install.packages(new.packages) 
 lapply(list.of.packages, library, character.only = TRUE) # If the list of packages we want and the list of new packages is not of the same length, install the packages listed in new.packages
 
-knitr::opts_chunk$set(fig.width=12, fig.height=8, fig.path='Figs_ch04/', 
-                      echo=TRUE, warning=FALSE, message=FALSE) # Set the knit options: save figures to a folder, echo code chunks in the knitted document, don't print warnings in the knitted doc, don't print messages in the knitted doc.
+knitr::opts_chunk$set(fig.width=12, fig.height=8, fig.path='Figs_ch04/', echo=TRUE, warning=FALSE, message=FALSE) # Set the knit options: save figures to a folder, echo code chunks in the knitted document, don't print warnings in the knitted doc, don't print messages in the knitted doc.
 ```
 
 # Chapter 4, Workflow: basics
+
+```{r calling functions}
+seq(1, 10)
+x <- "hello world"
+(y <- seq(1, 10, length.out = 5))
+```
+## Practice
+### 1. Why does this code not work?
+
+```
+my_variable <- 10
+my_varıable
+```
+```{r 4.4.1 solution}
+my_variable <- 10
+my_variable
+```
+
+### 2. Tweak each of the following R commands so that they run correctly:
+
+```
+library(tidyverse)
+
+ggplot(dota = mpg) + 
+  geom_point(mapping = aes(x = displ, y = hwy))
+
+fliter(mpg, cyl = 8)
+filter(diamond, carat > 3)
+```
+```{r 4.4.2}
+library(tidyverse)
+
+ggplot(data = mpg) +
+  geom_point(mapping = aes(x = displ, y = hwy))
+
+filter(mpg, cyl == 8) 
+filter(diamonds, carat > 3) 
+```
+
+### 3. Press Alt + Shift + K. What happens? How can you get to the same place using the menus?
+
+`Alt + Shift + k` provides a keyboard shortcut quick reference. To access the reference sheet from the menus, go to Tools > Keyboard shortcuts help
