--- a/chapter05-R-for-Data-Science-Solutions.Rmd
+++ b/chapter05-R-for-Data-Science-Solutions.Rmd
@@ -1,16 +1,15 @@
 ---
-title: Solutions to G. Grolemund & H. Wickhams’s [R for Data Science](http://r4ds.had.co.nz/index.html),   Chapter
-  5
+title: "Solutions to G. Grolemund & H. Wickhams’s [R for Data Science](http://r4ds.had.co.nz/index.html), Chapter 5"
 author: "Krista DeStasio"
 date: "8/2/2017"
 output:
+  pdf_document:
+    toc: yes
+    toc_depth: '4'
   html_document:
     toc: yes
     toc_depth: 4
     toc_float: yes
-  pdf_document:
-    toc: yes
-    toc_depth: '4'
 ---
 
 
@@ -34,7 +33,7 @@ new.packages <- list.of.packages[!(list.of.packages %in% installed.packages()[,"
 if(length(new.packages)) install.packages(new.packages) 
 lapply(list.of.packages, library, character.only = TRUE) # If the list of packages we want and the list of new packages is not of the same length, install the packages listed in new.packages
 
-knitr::opts_chunk$set(fig.width=12, fig.height=8, fig.path='Figs_ch04/', echo=TRUE, warning=FALSE, message=FALSE) # Set the knit options: save figures to a folder, echo code chunks in the knitted document, don't print warnings in the knitted doc, don't print messages in the knitted doc.
+knitr::opts_chunk$set(fig.width=12, fig.height=8, fig.path='Figs_ch05/', echo=TRUE, warning=FALSE, message=FALSE) # Set the knit options: save figures to a folder, echo code chunks in the knitted document, don't print warnings in the knitted doc, don't print messages in the knitted doc.
 ```
 
 # Chapter 5, Data transformation
